# MelnikovKnifeConcept_bot

./: README.md  pyproject.toml
app/admin_panel/: main.py  models.py
app/admin_panel/api/: routers.py
app/admin_panel/api/endpoints/: __init__.py  knifes.py  messages.py  tgusers.py
app/admin_panel/core/: config.py
app/admin_panel/schemas/: __init__.py  knifes.py  message.py  tguser.py
app/admin_panel/utils/: __init__.py  app_time.py  auth.py  celery.py  celery_app.py  validators.py
app/admin_panel/views/: __init__.py  knifes.py  messages.py  users.py
app/bot/: bot_menu.py  celery_app.py  config.py  constants.py  handler_delayed_message.py  handler_errors.py  handlers.py  keyboards.py  main.py  utils.py
